backend/abc.txt
  File "manage.py", line 17
    ) from exc
         ^
SyntaxError: invalid syntax
